@@ -159,7 +159,13 @@ cutData <- function(x, type = "default", hemisphere = "northern", n.levels = 4,
     makeCond <- function(x, type = "default") {
         ## adds a column "cond"
 
+        ## if type is time based and already exists in data, remove it
+        ## because we need to calculate it based on the date
 
+        if (type %in% dateTypes & type %in% names(x)) 
+             x <- x[ , !(names(x) %in% type)]
+        
+        
         conds <- c("default", "year", "hour", "month", "season", "weekday", "wd", "site",
                    "weekend", "monthyear", "bstgmt", "gmtbst", "dst", "daylight")
 
@@ -227,7 +233,7 @@ cutData <- function(x, type = "default", hemisphere = "northern", n.levels = 4,
             ## need to generate month abbrevs on the fly for different languages
              temp <- if (is.axis) "%b" else "%B"
              x[ , type] <- format(x$date, temp)
-
+             
              ## month names
              month.abbs <- format(seq(as.Date("2000-01-01"), as.Date("2000-12-31"), "month"), temp)
 
